@@ -1,6 +1,7 @@
 docker.io (1.11.2~ds1-7) UNRELEASED; urgency=medium
 
   * Update basic-smoke test with "set -x" for debuggability and proper Depends
+  * Build from within GOPATH so Go packages are resolved properly
 
  -- Tianon Gravi <tianon@debian.org>  Fri, 19 Aug 2016 12:52:55 -0700
 
